// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regression should add a new condition to the conditions array 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline can-remove-item">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" ref="logicalOperatorDropDownButton" type="button">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or" ref="globalOrOperator">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and" ref="globalAndOperator">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item" condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="1">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression should change all logical operators when changing it via the global logical operator selector 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline can-remove-item">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" ref="logicalOperatorDropDownButton" type="button">
              <span class="dropdown-toggle-selected-value"></span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or" ref="globalOrOperator">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and" ref="globalAndOperator">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item" condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">&lt;a&gt;and&lt;/a&gt;</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="1">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">&lt;a&gt;and&lt;/a&gt;</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression should display a confirmation modal when trying to delete a condition 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline can-remove-item">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" ref="logicalOperatorDropDownButton" type="button">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or" ref="globalOrOperator">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and" ref="globalAndOperator">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item" condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="1">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal d-block show" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression should populate operators when the first selected operand is a field 1`] = `
Array [
  Object {
    "name": "contains",
    "parameterTypes": Array [
      "text",
      "text",
    ],
    "returnType": "boolean",
    "value": "contains",
  },
  Object {
    "name": "equals-to",
    "parameterTypes": Array [
      "text",
      "text",
    ],
    "returnType": "boolean",
    "value": "equals-to",
  },
  Object {
    "name": "is-empty",
    "parameterTypes": Array [
      "text",
    ],
    "returnType": "boolean",
    "value": "is-empty",
  },
  Object {
    "name": "not-contains",
    "parameterTypes": Array [
      "text",
      "text",
    ],
    "returnType": "boolean",
    "value": "not-contains",
  },
  Object {
    "name": "not-equals-to",
    "parameterTypes": Array [
      "text",
      "text",
    ],
    "returnType": "boolean",
    "value": "not-equals-to",
  },
  Object {
    "name": "not-is-empty",
    "parameterTypes": Array [
      "text",
    ],
    "returnType": "boolean",
    "value": "not-is-empty",
  },
]
`;

exports[`Regression should populate operators when the first selected operand is an user 1`] = `
Array [
  Object {
    "name": "belongs-to",
    "parameterTypes": Array [
      "text",
    ],
    "returnType": "boolean",
    "value": "belongs-to",
  },
]
`;
